# diplom-robot

./: README.md
robot/install/: local_setup.sh  setup.sh
robot/install/robot/share/robot/: package.sh
robot/log/: latest_build
robot/src/robot/: README.md  package.xml  setup.py
robot/src/robot/bridge/: auth.py  broker.py  config.py  main.py  ros_handler.py  web_handler.py
robot/src/robot/bridge/api/: auth.py  robot.py
robot/src/robot/bridge/configs/: api_config.py  auth_config.py
robot/src/robot/bridge/models/: schemas.py
robot/src/robot/bridge/services/: auth.py  camera.py  camera_bridge.py  chassis_bridge.py  chassis_broker.py  cmd.py  head_bridge.py  node_manager.py  sensors.py  sensors_bridge.py
robot/src/robot/config/: config.yaml  constants.py  head_controller.yaml
robot/src/robot/launch/: common.launch.py  robot.launch.py  rsp.launch.py
robot/src/robot/meshes/: base_button_link.STL  base_center_link.STL  base_top_link.STL  camera_link.STL  head_link.STL  holder_back_left_link.STL  holder_back_right_link.STL  holder_front_left_link.STL  holder_front_right_link.STL  ir_back_center_link.STL  ir_front_center_link.STL  ir_front_left_link.STL  ir_front_right_link.STL  lion_1_link.STL  lion_2_link.STL  lion_3_link.STL  lion_6_link.STL  motor_back_left_link.STL  motor_back_right_link.STL  motor_front_left_link.STL  motor_front_right_link.STL  sound_head_sensor_link.STL  wheel_back_left_link.STL  wheel_back_right_link.STL  wheel_front_left_link.STL  wheel_front_right_link.STL
robot/src/robot/msg/: IrSensorsInfo.py  SensorInfo.py  ir_sensors_info.py  sensor_info.py
robot/src/robot/nodes/: base_movement_node.py  broker.py  head_movement_node.py  ir_sensor_agregator.py
robot/src/robot/robot/: chassis_broker.py  head_broker.py  ir_sensor_broker.py  ultrasonic_sensor_broker.py
robot/src/robot/urdf/: robot.urdf
robot/src/robot/worlds/: custom_world.sdf  custom_world.world
