<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kardash-99@list.ru">stepa</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend> 
  <depend>gazebo_ros</depend>  
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
